several bug fixes
1. Add https domain into CORS list

2. nginx add try_files to handle page reload

3. frontend WS.ts close connection on removeInstance

4. Replace defaultpfp.png to correct path in public direcotry

5. Removed dummy counter button at login page

6. Replaced game-local-2v2 & game-local-display_game to use env socket
   URL

7. Removed old game-online codes

8. Removed Google Sign In data-login_uri, as we are using data-callback

9. Add DOMPurify to players_friends_list div. XSS happened when friend
   log in

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,6 +6,9 @@ server {
 
 	root /app/build;
 	index index.html;
+	location / {
+		try_files $uri $uri/ /index.html;
+	}
 }
 server {
 	listen 3000 ssl;
